--- a/mace-vue/package.json
+++ b/mace-vue/package.json
@@ -8,30 +8,31 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "konva": "^7.1.4",
+    "core-js": "^3.8.3",
+    "konva": "^7.2.2",
     "leaflet": "^1.7.1",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.1",
+    "socket.io": "^2.4.1",
+    "socket.io-client": "^2.4.0",
     "vue": "^2.6.11",
     "vue-konva": "^2.1.6",
-    "vue-router": "^3.4.6",
+    "vue-router": "^3.5.1",
     "vue-socket.io": "^3.0.10",
+    "vue-socket.io-extended": "^4.0.6",
     "vue2-leaflet": "^2.6.0",
-    "vuetify": "^2.3.14",
-    "vuex": "^3.4.0"
+    "vuetify": "^2.4.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-vuex": "^4.5.7",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-vuex": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.19.0",
+    "sass": "^1.32.5",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-cli-plugin-vuetify": "^2.0.9",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
